// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render a multiselect 1`] = `
<div
  className="yoast-field-group"
>
  <div
    className="yoast-field-group__title"
  >
    <label
      htmlFor="my-awesome-multiselect"
    >
      Nice label
    </label>
    <a
      className="yoast-help"
      href="https://yoast.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        className="yoast-help__icon"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          role="img"
          viewBox="0 0 12 12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6A6 6 0 110 6a6 6 0 0112 0zM6.2 2C4.8 2 4 2.5 3.3 3.5l.1.4.8.7.4-.1c.5-.5.8-.9 1.4-.9.5 0 1.1.4 1.1.8s-.3.6-.7.9C5.8 5.6 5 6 5 7c0 .2.2.4.3.4h1.4L7 7c0-.8 2-.8 2-2.6C9 3 7.5 2 6.2 2zM6 8a1.1 1.1 0 100 2.2A1.1 1.1 0 006 8z"
          />
        </svg>
      </span>
      <span
        className="screen-reader-text"
      >
        Tell me what this link does
      </span>
      <span
        className="screen-reader-text"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </div>
  <select
    defaultValue={Array []}
    id="my-awesome-multiselect"
    multiple="multiple"
    name="my-selection[]"
  >
    <option
      value="hi"
    >
      hi
    </option>
    <option
      value="ho"
    >
      ho
    </option>
  </select>
</div>
`;

exports[`Select should render a select 1`] = `
<div
  className="yoast-field-group"
>
  <div
    className="yoast-field-group__title"
  >
    <label
      htmlFor="my-awesome-multiselect"
    >
      Nice label
    </label>
    <a
      className="yoast-help"
      href="https://yoast.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        className="yoast-help__icon"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          role="img"
          viewBox="0 0 12 12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6A6 6 0 110 6a6 6 0 0112 0zM6.2 2C4.8 2 4 2.5 3.3 3.5l.1.4.8.7.4-.1c.5-.5.8-.9 1.4-.9.5 0 1.1.4 1.1.8s-.3.6-.7.9C5.8 5.6 5 6 5 7c0 .2.2.4.3.4h1.4L7 7c0-.8 2-.8 2-2.6C9 3 7.5 2 6.2 2zM6 8a1.1 1.1 0 100 2.2A1.1 1.1 0 006 8z"
          />
        </svg>
      </span>
      <span
        className="screen-reader-text"
      >
        Tell me what this link does
      </span>
      <span
        className="screen-reader-text"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </div>
  <select
    defaultValue="hi"
    id="my-awesome-multiselect"
    name="my-selection"
    onBlur={[Function]}
  >
    <option
      value="hi"
    >
      hi
    </option>
    <option
      value="ho"
    >
      ho
    </option>
  </select>
</div>
`;
